test_suite/tests/ui/transparent/enum.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(transparent)]
enum E {}

fn main() {}
